welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value getColor
                                          for (i <- 0 to T.length-1) { T(i) = getColor()
                                                                              ^